Change Hamburger; fix fadeIn jump bug

--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,6 @@ a {
 }
 
 .hamburger {
-	height: 25px;
-	width: 25px;
-	position: absolute;
-	left: 10px;
-	top: 10px;
 	cursor: pointer;
 }
 
